# dbt-temporal

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  Cargo.toml  LICENSE  Makefile  README.md  THIRD-PARTY-LICENSES.md  TODO.md  clippy.toml  rustfmt.toml
.github/workflows/: ci.yml  docker.yml  release.yml
docker/: Dockerfile  Dockerfile.distroless  Dockerfile.release  docker-compose.postgres.yml  init-postgres.sh
docs/: adbc-postgres-macos-segfault.md  architecture.md  configuration.md  deployment.md  env-overrides.md  error-handling.md  hooks.md  workarounds.md
examples/: README.md  debug_render.rs  jaffle-shop-seed-postgres.sql  jaffle-shop-seed.sql
examples/bigquery/: dbt_project.yml  profiles.yml
examples/bigquery/analyses/: station_utilization_report.sql
examples/bigquery/macros/: bq_labels.sql  format_station_id.sql  generate_audit_columns.sql  log_run_results.sql  query_comment.sql  safe_round.sql  set_table_metadata.sql  source_exists.sql
examples/bigquery/models/: docs.md  schema.yml  sources.yml
examples/bigquery/models/marts/: active_stations.sql  daily_station_activity.sql  ephemeral_helper.sql  station_dashboard_summary.sql  station_summary.sql  subscriber_analysis.sql  trip_summary.sql
examples/bigquery/models/staging/: stg_stations.sql  stg_stations_deduped.sql  stg_trips.sql
examples/bigquery/tests/: assert_stations_have_trips.sql
examples/bigquery/tests/generic/: greater_than.sql  is_positive.sql  not_empty.sql
examples/env-override/: dbt_project.yml  dbt_temporal.yml  profiles.yml  seed-postgres.sql
examples/env-override/models/: customer_orders.sql  customers.sql  orders.sql
examples/jaffle-shop/: profiles.yml
examples/multi-project/: seed-postgres.sql
examples/multi-project/analytics/: dbt_project.yml  profiles.yml
examples/multi-project/analytics/models/: schema.yml
examples/multi-project/analytics/models/marts/: daily_active_users.sql  user_activity.sql
examples/multi-project/analytics/models/staging/: stg_events.sql  stg_users.sql
examples/multi-project/marketing/: dbt_project.yml  profiles.yml
examples/multi-project/marketing/models/: campaign_performance.sql  schema.yml  sources.yml  stg_campaigns.sql  stg_impressions.sql
examples/single-project/: dbt_project.yml  dbt_temporal.yml  profiles.yml  seed-postgres.sql
examples/single-project/macros/: log_run_results.sql
examples/single-project/models/: schema.yml  sources.yml
examples/single-project/models/marts/: active_stations.sql  ephemeral_helper.sql  station_summary.sql
examples/single-project/models/staging/: stg_stations.sql  stg_stations_deduped.sql
scripts/: build-adbc-postgres.sh
src/: error.rs  health.rs  hooks.rs  lib.rs  main.rs  project_registry.rs  telemetry_compat.rs  tracing_setup.rs  worker_state.rs
src/activities/: catalog.rs  dag.rs  execute_node.rs  heartbeat.rs  mod.rs  node_helpers.rs  node_serialization.rs  node_telemetry.rs  plan.rs  project_hooks.rs  selectors.rs  store_artifacts.rs
src/activities/execute_node/: freshness.rs  raw_sql.rs  schema_patch.rs  schema_patcher.rs  unit_test.rs  yml_to_value.rs
src/artifact_store/: local.rs  mod.rs  object_store_backend.rs
src/config/: discovery.rs  mod.rs  test_util.rs  tuning.rs
src/model_store/: git.rs  mod.rs  object_store_backend.rs
src/types/: hooks.rs  mod.rs  workflow.rs
src/worker/: adapter.rs  mod.rs  profile.rs  temporal.rs
src/workflow/: helpers.rs  levels.rs  mod.rs  phases.rs
tests/: artifact_store_s3.rs  bigquery.rs  duckdb_execute_node_scenarios.rs  duckdb_plan_scenarios.rs  duckdb_profile_scenarios.rs  duckdb_scenarios.rs  test_examples.sh  waffle_hut.rs
tests/bigquery/: basic.rs  infra.rs  test_gating.rs
tests/common/: duckdb.rs  fault_engine.rs  mod.rs
tests/fixtures/mini_project/: dbt_project.yml
tests/fixtures/mini_project/dbt_internal_packages/dbt-adapters/macros/relations/: get_relations_by_pattern.sql
tests/fixtures/mini_project/models/: customer_count.sql  sources.yml
tests/fixtures/waffle_hut/: dbt_project.yml  profiles.yml
tests/fixtures/waffle_hut/dbt_internal_packages/dbt-adapters/macros/etc/: statement.sql
tests/fixtures/waffle_hut/models/: schema.yml  sources.yml
tests/fixtures/waffle_hut/models/marts/: customers.sql  orders.sql
tests/fixtures/waffle_hut/models/staging/: stg_customers.sql  stg_orders.sql  stg_payments.sql
tests/waffle_hut/: artifacts.rs  basic.rs  env_isolation.rs  env_vars.rs  failure.rs  freshness.rs  hook_echo.rs  hooks.rs  infra.rs  lifecycle_hooks.rs  multi_project.rs  robustness.rs  unit_tests.rs
