[package]
name = "dbt-temporal"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Execute dbt DAGs as Temporal Workflows"

[[bin]]
name = "dbt-temporal"
path = "src/main.rs"

[lib]
name = "dbt_temporal"
path = "src/lib.rs"

[dependencies]
# Temporal SDK
temporalio-sdk = "0.4.0"
temporalio-sdk-core = "0.4.0"
temporalio-client = "0.4.0"
# otel + prometheus enable the worker-metrics exporters in the telemetry module.
temporalio-common = { version = "0.4.0", features = ["otel", "prometheus"] }
temporalio-macros = "0.4.0"

# dbt-fusion, now developed in the dbt-core repo as dbt Core v2 (pinned to main, 2026-06-11)
dbt-loader = { git = "https://github.com/dbt-labs/dbt-core", rev = "2928c13ace5c3596669c264ebda5582b0a745376" }
dbt-parser = { git = "https://github.com/dbt-labs/dbt-core", rev = "2928c13ace5c3596669c264ebda5582b0a745376" }
dbt-schemas = { git = "https://github.com/dbt-labs/dbt-core", rev = "2928c13ace5c3596669c264ebda5582b0a745376" }
dbt-jinja-utils = { git = "https://github.com/dbt-labs/dbt-core", rev = "2928c13ace5c3596669c264ebda5582b0a745376" }
dbt-adapter = { git = "https://github.com/dbt-labs/dbt-core", rev = "2928c13ace5c3596669c264ebda5582b0a745376" }
dbt-common = { git = "https://github.com/dbt-labs/dbt-core", rev = "2928c13ace5c3596669c264ebda5582b0a745376" }
dbt-telemetry = { git = "https://github.com/dbt-labs/dbt-core", rev = "2928c13ace5c3596669c264ebda5582b0a745376" }
dbt-auth = { git = "https://github.com/dbt-labs/dbt-core", rev = "2928c13ace5c3596669c264ebda5582b0a745376" }
dbt-xdbc = { git = "https://github.com/dbt-labs/dbt-core", rev = "2928c13ace5c3596669c264ebda5582b0a745376" }
dbt-agate = { git = "https://github.com/dbt-labs/dbt-core", rev = "2928c13ace5c3596669c264ebda5582b0a745376" }
dbt-csv = { git = "https://github.com/dbt-labs/dbt-core", rev = "2928c13ace5c3596669c264ebda5582b0a745376" }
minijinja = { git = "https://github.com/dbt-labs/dbt-core", rev = "2928c13ace5c3596669c264ebda5582b0a745376" }
dbt-yaml = "0.9.5"

# Standard
tokio = { version = "1", features = ["full"] }
futures = "0.3"
# Required by code generated by temporalio's #[workflow] macro (uses ::futures_util::*).
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
url = "2"
uuid = { version = "1", features = ["v4"] }
filetime = "0.2"
arrow-select = "56"
# Unit test result comparison (patched to the sdf-labs fork like all arrow crates).
arrow-array = "56"
arrow-cast = "56"
# CSV fixture parsing for dbt unit tests.
csv = "1"
tempfile = "3"
prost-types = { version = "0.7", package = "prost-wkt-types" }

# Artifact stores (feature-gated)
object_store = { version = "0.12", optional = true }
regex = "1.12.3"

dbt-antlr4 = "1"

[features]
default = []
gcs = ["object_store/gcp"]
aws = ["object_store/aws"]
bigquery-tests = []

[dev-dependencies]
testcontainers = { version = "0.27", features = ["watchdog"] }
testcontainers-modules = { version = "0.15", features = ["postgres", "minio"] }
aws-sdk-s3 = "1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-credential-types = "1"
temporalio-sdk-core = { version = "0.4.0", features = ["ephemeral-server"] }

[lints.rust]
unsafe_code = "deny"
unused_must_use = "deny"
unused_imports = "deny"
dead_code = "deny"
unreachable_code = "deny"
unreachable_patterns = "deny"
missing_debug_implementations = "deny"
unused_qualifications = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Allow pedantic lints that are pervasive and low-signal
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
doc_markdown = "allow"
# Restriction lints — prevent common mistakes
unwrap_used = "deny"
expect_used = "deny"
clone_on_ref_ptr = "deny"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"
todo = "deny"
unimplemented = "deny"
needless_pass_by_value = "deny"

# Patches required to match dbt-fusion's dependency versions.
# dbt-fusion uses forked arrow-rs and arrow-adbc.
# Without these patches, version conflicts prevent compilation.
[patch.crates-io]
# Forked arrow-rs (v56) used by dbt-fusion
arrow = { git = "https://github.com/sdf-labs/arrow-rs", rev = "e4924d7d6d07bb12ba6628e595f9f58c2c02c9a1" }
arrow-arith = { git = "https://github.com/sdf-labs/arrow-rs", rev = "e4924d7d6d07bb12ba6628e595f9f58c2c02c9a1" }
arrow-array = { git = "https://github.com/sdf-labs/arrow-rs", rev = "e4924d7d6d07bb12ba6628e595f9f58c2c02c9a1" }
arrow-buffer = { git = "https://github.com/sdf-labs/arrow-rs", rev = "e4924d7d6d07bb12ba6628e595f9f58c2c02c9a1" }
arrow-cast = { git = "https://github.com/sdf-labs/arrow-rs", rev = "e4924d7d6d07bb12ba6628e595f9f58c2c02c9a1" }
arrow-csv = { git = "https://github.com/sdf-labs/arrow-rs", rev = "e4924d7d6d07bb12ba6628e595f9f58c2c02c9a1" }
arrow-data = { git = "https://github.com/sdf-labs/arrow-rs", rev = "e4924d7d6d07bb12ba6628e595f9f58c2c02c9a1" }
arrow-ipc = { git = "https://github.com/sdf-labs/arrow-rs", rev = "e4924d7d6d07bb12ba6628e595f9f58c2c02c9a1" }
arrow-json = { git = "https://github.com/sdf-labs/arrow-rs", rev = "e4924d7d6d07bb12ba6628e595f9f58c2c02c9a1" }
arrow-ord = { git = "https://github.com/sdf-labs/arrow-rs", rev = "e4924d7d6d07bb12ba6628e595f9f58c2c02c9a1" }
arrow-row = { git = "https://github.com/sdf-labs/arrow-rs", rev = "e4924d7d6d07bb12ba6628e595f9f58c2c02c9a1" }
arrow-schema = { git = "https://github.com/sdf-labs/arrow-rs", rev = "e4924d7d6d07bb12ba6628e595f9f58c2c02c9a1" }
arrow-select = { git = "https://github.com/sdf-labs/arrow-rs", rev = "e4924d7d6d07bb12ba6628e595f9f58c2c02c9a1" }
arrow-string = { git = "https://github.com/sdf-labs/arrow-rs", rev = "e4924d7d6d07bb12ba6628e595f9f58c2c02c9a1" }

# ring build.rs workaround (same as dbt-fusion)
ring = { git = "https://github.com/sdf-labs/ring.git", rev = "3c35ce0b7e1bd9fe83180b19eda21d302e0b5006" }
